methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: not found: type color
def hunt(c:color) {
           ^SlugSnail:15: error: not found: type color
def isFacingTrail(c:color):Boolean = {
                    ^SlugSnail:5: error: not found: type color
    while (isFacingTrail(c:color) == false) {
                           ^